--- a/src/lib/document-viewer/components/form-item-filler/form-item-filler.component.html
+++ b/src/lib/document-viewer/components/form-item-filler/form-item-filler.component.html
@@ -2,11 +2,11 @@
   class="form-item-box"
   [class.item-invalid]="invalid">
   <div class="opal-fx-row opal-fx-align-center opal-p-3 opal-border-b-1 opal-border-grey-100">
-    <div class="heading opal-fx-row opal-fx-align-center opal-fx-g-1">
+    <div class="heading opal-fx-row opal-fx-align-center opal-fx-g-1 opal-min-s-0">
       <div class="opal-fx-row opal-fx-align-center opal-fx-g-1 opal-min-s-0">
         <div
           *ngIf="icon"
-          class="opal-fx-row opal-fx-align-center opal-fx-center opal-mr-1 opal-s-6 opal-radius-4 opal-border-1 opal-border-grey-200">
+          class="opal-fx-row opal-fx-align-center opal-fx-center opal-fx-s-0 opal-mr-1 opal-s-6 opal-radius-4 opal-border-1 opal-border-grey-200">
           <ngx-t3-icon
             iconClass="opal-s-4"
             [icon]="icon"></ngx-t3-icon>
